# data-migration

./: .gitignore  README.md  pyproject.toml
.cursor/plans/: company-entity-resolution-prototype-e69af860.plan.md
All_Records_Fuzzy_Matching/: Data_Cleaning_All_Records_File.ipynb  JaroWinklerSim_CompanyNames - Databricks.html  Memory_Calculations.ipynb  STRING_SIMILARITY_UTILS.py  Similarity_For_All_Records.ipynb  TFIDF_Sim_Utils.py  comp_names.txt
All_Records_Fuzzy_Matching/DataCleaningRoutine/: README.md  all_output.txt  run.sh  sanitize.py  sanitize.py.backup  supplier_names.txt
All_Records_Fuzzy_Matching/DataCleaningRoutine/files/: company_names.txt  rules.json  test_file.txt
All_Records_Fuzzy_Matching/OldNotebooks/: TFIDF_Sim_DistinctRecords.ipynb  TFIDF_Similarity.ipynb
All_Records_Fuzzy_Matching/TFIDF_Sim_For_All_Records/: Similarity_For_All_Records.ipynb
docs/: GLINER_MPS_OPTIMIZATION_GUIDE.md  MIGRATION_SUMMARY.md  MPS_ACCELERATION_SUMMARY.md
notebooks/: comparison.ipynb  groupings.ipynb  lgbm.ipynb
scripts/: sanitize.py  sanitize_simple.py
src/: README.md  __init__.py  config.py
src/clustering/: __init__.py  blocking.py  cluster.py  evaluation.py
src/core/: __init__.py  features.py  inference.py  preprocessing.py  train.py
src/sanitization/: __init__.py  company_name_sanitiser.py  gliner_classifier.py  sanitisation_rules.json  simple_sanitizer.py
src/storage/: __init__.py  db_manager.py  db_utils.py
src/utils/: __init__.py  common.py
